@@ -220,3 +220,5 @@ Contributors
 - Matthew Wilkes, 2013/08/23
 
 - Takahiro Fujiwara, 2013/08/28
+
+- Doug Hellmann, 2013/09/06
